syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message RegisterSystemRequest {
    string name = 1;
    string description = 2;
    string version = 3;
} 

message RegisterSystemResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string version = 4;
}

service SystemService {
    rpc RegisterSystem(RegisterSystemRequest) returns (RegisterSystemResponse);
}
